@@ -9,6 +9,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+
 import com.opencsv.CSVWriter;
 
 
@@ -19,7 +20,7 @@ public class RepozytoriumPacjentow {
 
     public RepozytoriumPacjentow() {
         try {
-            Path bazaPacjentow = Paths.get(ClassLoader.getSystemResource("final_baza_danych_pacjentow.csv").toURI());
+            Path bazaPacjentow = Path.of("./final_baza_danych_pacjentow.csv");
             this.zaladujDane(bazaPacjentow);
         } catch (URISyntaxException e) {
             System.out.println("Nie udało się załadować danych, sorki :(");
@@ -45,7 +46,8 @@ public class RepozytoriumPacjentow {
             System.out.println("Nie udało się pobrać danych, sorki :(");
         }
     }
-//--------------------------------------------------
+
+    //--------------------------------------------------
     private void wyswietlPacjenta(Pacjent pacjent, String pracownik) {
         if (Objects.equals(pracownik, "pielęgniarka")) {
             String format = "| %-4d | %-14s | %-14s | %-11s | %-11s | %-14s | %-23s | %-9s | %-40s |%n";
@@ -133,17 +135,106 @@ public class RepozytoriumPacjentow {
         pacjentDoZmianyNrTelefonu.setNrTelefonu(nowyNrTelefonu);
     }
 
+    public void zmodyfikujHistoriePacjentaPoID(int idPacjenta, int idElementu, String noweDane) {
+        try {
+            this.pacjenci.get(idPacjenta).zmodyfikujElementZHistoriiLeczeniaPoIndeksie(idElementu, noweDane);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+
+    public void zmodyfikujHistoriePacjentaPoWartosci(int idPacjenta, String wartosc, String noweDane) {
+        try {
+            this.pacjenci.get(idPacjenta).modyfikujElementZHistoriiLeczeniaPoWartosci(wartosc, noweDane);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void zmodyfikujLekiPacjentaPoID(int idPacjenta, int idElementu, String noweDane) {
+        try {
+            this.pacjenci.get(idPacjenta).zmodyfikujElementZPrzyjmowanychLekow(idElementu, noweDane);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void zmodyfikujLekiPacjentaPoWartosci(int idPacjenta, String wartosc, String noweDane) {
+        try {
+            this.pacjenci.get(idPacjenta).modyfikujElementZPrzyjmowanychLekowPoWartosci(wartosc, noweDane);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void dodajElementDoHistoriiLeczenia(int idPacjenta, String noweDane) {
+        try {
+            this.pacjenci.get(idPacjenta).dodajDoHistoriiLeczenia(noweDane);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void dodajElementDoLekow(int idPacjenta, String noweDane) {
+        try {
+            this.pacjenci.get(idPacjenta).dodajPrzyjmowanyLek(noweDane);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void usunElementZHistoriiLeczeniaPoID(int idPacjenta, int idElementu) {
+        try {
+            this.pacjenci.get(idPacjenta).usunElementZHistoriiLeczeniaPoIndeksie(idElementu);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void usunLekPoID(int idPacjenta, int idElementu) {
+        try {
+            this.pacjenci.get(idPacjenta).usunElementZPrzyjmowanychLekowPoIndeksie(idElementu);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void usunElementZHistoriiLeczeniaPoWartosci(int idPacjenta, String staraTresc) {
+        try {
+            this.pacjenci.get(idPacjenta).usunElementZHistoriiLeczeniaPoWartosci(staraTresc);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+    public void usunLekPoWartosci(int idPacjenta, String staraTresc) {
+        try {
+            this.pacjenci.get(idPacjenta).usunElementZPrzyjmowanychLekowPoWartosci(staraTresc);
+            System.out.println("Modyfikacja się powiodła");
+        } catch (Exception e) {
+            System.out.println("Modyfikacja nie powiodła się");
+        }
+    }
+
+
     public void dodajPacjenta(String imie, String nazwisko, String narodowosc, String pesel, String nrTelefonu, String adresZamieszkania, String miejsceUrodzenia, String dataUrodzenia) {
         int idPacjenta = pacjenci.size() + 1;
         Pacjent pacjentDoDodania = new Pacjent(idPacjenta, imie, nazwisko, pesel, nrTelefonu, narodowosc, miejsceUrodzenia, adresZamieszkania, dataUrodzenia, new ArrayList<>(), new ArrayList<>());
         pacjenci.put(idPacjenta, pacjentDoDodania);
     }
 
-    public void zapiszDoPliku(){
-        //final Path CSV_FILE_PATH = Paths.get(ClassLoader.getSystemResource("final_baza_danych_pacjentow.csv").toURI());
-
-
-        try{
+    public void zapiszDoPliku() {
+        try {
             final Path CSV_FILE_PATH = Path.of("./final_baza_danych_pacjentow.csv");
             FileWriter outputfile = new FileWriter(CSV_FILE_PATH.toFile());
             CSVWriter writer = new CSVWriter(outputfile, ';',
@@ -151,8 +242,8 @@ public class RepozytoriumPacjentow {
                     CSVWriter.DEFAULT_ESCAPE_CHARACTER,
                     CSVWriter.DEFAULT_LINE_END);
 
-            List<String[]> data = new ArrayList<String[]>();
-            String [] naglowki = new String[11];
+            List<String[]> data = new ArrayList<>();
+            String[] naglowki = new String[11];
             naglowki[0] = "Imię";
             naglowki[1] = "Nazwisko";
             naglowki[2] = "Narodowość";
@@ -166,8 +257,8 @@ public class RepozytoriumPacjentow {
             naglowki[10] = "Przyjmowane leki";
             data.add(naglowki);
 
-            for(Map.Entry<Integer, Pacjent> e: this.pacjenci.entrySet()){
-                String [] tab = new String[11];
+            for (Map.Entry<Integer, Pacjent> e : this.pacjenci.entrySet()) {
+                String[] tab = new String[11];
                 tab[0] = e.getValue().getImie();
                 tab[1] = e.getValue().getNazwisko();
                 tab[2] = e.getValue().getNarodowosc();
@@ -179,14 +270,14 @@ public class RepozytoriumPacjentow {
                 tab[8] = String.valueOf(e.getValue().getIdPacjenta());
                 tab[9] = e.getValue().getHistoriaLeczenia();
                 tab[10] = e.getValue().getPrzyjmowaneLeki();
-                //System.out.println(e.getValue().getPrzyjmowaneLeki());
+
                 data.add(tab);
             }
 
             writer.writeAll(data);
             writer.close();
 
-        }catch(Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
         }
 
